# TikTok_mastermind

./: .breakpoints  bot.py  config.py  csgo.py  dash_actions.py  dispatcher.py  error_soup_message.txt  filters.py  last_id.txt  links_register.txt  main.py  marketplace_parcer.py  news.py  news_links.txt  ozon.html  pyproject.toml  requirements.txt  sim.py  stocks.py  tiktok.py  tiktok_register.txt  yandex_links_register.txt
csgocards/: cs_go_full_reg.xlsx  register_total.xlsx
handlers/: config.py  dispatcher.py  filters.py  imports.py  personal_actions.py
html files/: csgo.html  onlinesim.html
logs/: run_info.csv
news/: last_id.txt  news_register.txt  yandex_links_register.txt
tmp/: DevToolsActivePort
tmp/Default/GPUCache/: data_1  index
tmp/Default/Local Storage/leveldb/: LOG  LOG.old
